Forge Beta: 08-##-2014 ver 1.5.24


##### cards in total.


-------------
Release Notes
-------------

- New Commander 2014 and KTK cards -
We have added a branch to our SVN for the new cards that are currently being scripted. These cards are not yet available in this build of forge. Please be patient and they will soon become available.


---------
New Cards
---------

Sentinel Dispatch
Panglacial Wurm
Cultural Exchange


New Commander 2014 branch Cards

Ghoulcaller Gisa
Teferi, Temporal Archmage


New KTK branch Cards

Zurgo Helmsmasher


------------
Known Issues
------------

- Continued Work on Conspiracy -
Conspiracy is one of the strangest sets that have been released in some time. Currently, we have a few of the "Draft matters" cards scripted, although you'll find that they won't quite be available to you (unless you add them manually into a draft deck). Hopefully we'll get the appropriate functionality in so we can start including them in boosters and allowing you to add Conspiracy type cards straight to your deck the way you do every other variant card. We'll make sure to point out when all of these kinks have worked themselves out.

- The Mac OS application version -
We can now package Forge as a Mac OS application. You can double click the Forge.app icon to launch the forge application on your Apple computer running Mac OS. This application will automatically increase the java heap space memory for you as it launches. This version does not require the forge.command file and it does not need to start the Terminal application as part of the start up process.

The Mac OS X app version apparently requires the Mavericks OS and is not compatible with earlier OS X versions. People with earlier OS X versions should use the Windows and Linux version and launch forge on their Mac by double clicking on the included "forge.command" file.

- Magic 2015 cards -